(2001/06/15 - broeker) Bugfix to flex scanner: comments after an #endif, 
	               without any whitespace in between, would be dumped
		       to stdout.
(2001/06/15 - broeker) Minor documentation glitch in manpage and online help
	               screen: set of keys to choose from matches found 
		       contains 0-9, not 1-9. 
(2001/06/01 - broeker) New version of fscanner.l, and lots of
	               small changes to other source files, too. Avoids
		       (ab)use of yytext[] as a temporary buffer by unrelated
		       pieces of code, and changes exported variables of the
		       scanned line from lex-internal yyleng and my_yyleng 
		       to my_yytext and my_yyleng. New header files scanner.h
		       and lookup.h. 
(2001/06/01 - broeker) Fix 64bit-related bug in invlib.c that caused the symbol
                       'sun' to not be found on DigitalUnix/Alpha platform.
(2001/05/30 - dixon) arrow and editing keys can be now used at the input line
(2001/05/30 - duell) invname database issue fix.
(2001/05/20 - garret)  Fixed some mishaps in ocs.
(2001/04/30 - broeker) Fixed signed char casting bug in dicode compression. 
	               Encapsulated dicode compression idioms into macros
		       IS_A_DICODE() and DICODE_COMPRESS().
(2001/04/26 - ogawa) Fix for posterr
(2001/04/26 - sorfa) Fixed a SIGSEGV in linemode in find.c. Thanks to OGAWA Hirofumi
                     for pointing out the problem.
(2001/04/24 - slutz) STMTMAX increased to 10000
(2001/03/29 - broeker) Some further MSDOS/DJGPP patches. Close file 
	               'refsfound' before unlinking it. Avoid calling curses
 	               function nonl().  Replace fork/exec/wait machinery in 
	               exec.c by call to lib function spawnvp().
(2001/03/28 - broeker) Added flex-able version of scanner.l to the project, as
	               file src/fscanner.l. Changed configure.in and 
		       src/Makefile.am to use it if using 'flex'.